<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        style="@style/CodeFont.Red.Big"
        android:text="@string/user_create_message"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/username"
        style="@style/NormalFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_create_enter" />

    <TextView
        android:id="@+id/firstName"
        style="@style/NormalFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/edit_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_create_enter" />

    <TextView
        android:id="@+id/lastName"
        style="@style/NormalFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/edit_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_create_enter" />

    <TextView
        android:id="@+id/date_of_birth"
        style="@style/NormalFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date" />

    <TextView
        android:id="@+id/location"
        style="@style/NormalFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location" />

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_create_enter" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CreateUser"
        android:text="@string/user_create_submit" />
    
</LinearLayout>
